tests/derive_ui/flatten_and_methods.stderr
error: methods are not allowed for flattened entry
  --> tests/derive_ui/flatten_and_methods.rs:22:22
   |
22 |     #[command(short, flatten)]
   |                      ^^^^^^^
